# K-AVT

./: .gitignore  compile.py  compileA.py  compileB.py  kavt.py  kavt.spec  pyproject.toml  readme.md
compile_aux/: boilerplate-hook-shapely.py  hook-paddle.py  hook-shapely.py  image.py
program/: autoMode.py  main.py  ocr.py  translator.py
program/components/: button.py  frame.py  imageLabel.py  label.py  menuBar.py  separator.py
program/old/: others.py  tesseracttest.py  test.py
program/windows/: aboutW.py  credentialsW.py
